# tinkoff_invest_bot

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  main.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: formatter.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test_tinkoff_invest_bot.py
tinkoff_invest_bot/: __init__.py  utils.py
tinkoff_invest_bot/api/: __init__.py  client_service.py
tinkoff_invest_bot/data/: __init__.py  base.py  fetchers.py
tinkoff_invest_bot/strategy/: strategies.py
