[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "tinkoff_invest_bot"
version = "0.1.0"
authors = [
  { name="Nikita Toloknov", email="4170407@gmail.com" },
]
description = " and logging."
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/amp1re/tinkoff_invest_bot"
Issues = "https://github.com/amp1re/tinkoff_invest_bot/issues"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = "tinkoff_invest_bot"

[tool.pylint.MASTER]
ignore-paths = [
    ".venv",
    "build",
    "dist"
]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "C0103",  # Variable name doesn't conform to snake_case naming style
    "C0114",  # Missing module docstring
    # Add other error codes here
]

[tool.mypy]
files = ["tinkoff_invest_bot", "tests"]
ignore_missing_imports = true
